# Proyecto2

./: Archivos.cpp  Archivos.h  BaseEntity.cpp  BaseEntity.h  Bitacora.cpp  Bitacora.h  CMakeLists.txt  DataManager.cpp  DataManager.h  Encounter.cpp  Encounter.h  EncounterFactory.cpp  EncounterFactory.h  Enemigos.cpp  Enemigos.h  Enemy.h  GameEngine.cpp  GameEngine.h  Inventario.cpp  Inventario.h  Inventory.cpp  Inventory.h  Item.h  Jugador.h  Objetos.cpp  Objetos.h  Player.h  Reporte.cpp  Reporte.h  SistemaCombate.cpp  SistemaCombate.h  SistemaGeneral.cpp  SistemaGeneral.h  main.cpp
